--- a/app/views/pc_configurations/index.html.erb
+++ b/app/views/pc_configurations/index.html.erb
@@ -22,4 +22,9 @@
       <% end %>
     </div>
   </div>
+  <div class="row pt-3 pc_configuration-index">
+    <div class="col-md-12 d-flex justify-content-center pc_configuration-index__paginate">
+      <%= paginate @pc_configurations %>
+    </div>
+  </div>
 </div>
