--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,4 +30,9 @@
       <% end %>
     </div>
   </div>
+  <div class="row pt-3 post-index">
+    <div class="col-md-12 d-flex justify-content-center post-index__paginate">
+      <%= paginate @posts %>
+    </div>
+  </div>
 </div>
