[finish]投稿詳細画面のいいね表示部修正実施

--- a/app/views/post_favorites/_favorite.html.erb
+++ b/app/views/post_favorites/_favorite.html.erb
@@ -8,4 +8,6 @@
       <span class="text-primary">♡ </span><span class="text-secondary"><%= post.post_favorites.count %>いいね</span>
     <% end %>
   <% end %>
+<% else %>
+  ♥<%= post.post_favorites.count %>いいね
 <% end %>
