--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
   <div class="row pt-3 user-show__post">
     <div class="col-md-6 user-show__post">
       <div class="mt-3 d-flex justify-content-center user-show__post__title">
-        <h4 class="user-show__post__title">投稿一覧</h4>
+        <h4 id="user-show__post-index__title">投稿一覧</h4>
       </div>
       <div id="user-show__post-index">
         <%= render 'users/post_index', posts: @posts %>
