--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,22 +39,10 @@
     </div>
     <div class="col-md-6 user-show__pc-configuration">
       <div class="mt-3 d-flex justify-content-center user-show__pc-configuration__title">
-        <h4>PC構成リスト一覧</h4>
+        <h4 id="user-show__pc-configuration__title">PC構成リスト一覧</h4>
       </div>
-      <% @pc_configurations.each do |pc_configuration| %>
-      <div class="d-flex justify-content-center user-show__pc-configuration">
-        <%= link_to pc_configuration_path(pc_configuration.id) do %>
-        <div class="user-show__pc-configuration__content-box p-3">
-          <div class="user-show__pc-configuration__content-box__image"><%= attachment_image_tag pc_configuration, :image, fallback: "no_image.jpg", size: "300x200" %></div>
-          <div class="text-dark user-show__pc-configuration__content-box__title"><%= pc_configuration.title.truncate(20) %></div>
-          <div class="small text-dark user-show__pc-configuration__content-box__user-name">ユーザーネーム：<%= pc_configuration.user.name %></div>
-          <div class="small text-dark user-show__pc-configuration__content-box__created-at">投稿日時：<%= pc_configuration.created_at.to_s(:datetime_jp) %></div>
-        </div>
-        <% end %>
-      </div>
-      <% end %>
-      <div class="d-flex justify-content-center user-show__pc-configuration__paginate">
-        <%= paginate @pc_configurations, param_name: 'pc_configurations_page' %>
+      <div id="user-show__pc-configuration">
+        <%= render 'users/pc_configuration', pc_configurations: @pc_configurations %>
       </div>
     </div>
   </div>
