--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,29 +4,9 @@
       <h5 class="col-md-12 post-show__title__content"><%= @post.title.truncate(30) %> の投稿詳細</h5>
     </div>
   </div>
-  <div class="row pt-3 post-show__left">
+  <div class="row pt-3 post-show">
     <div class="col-md-7 post-show__left">
-      <div class="mb-2 d-flex justify-content-center post-show__left__image"><%= attachment_image_tag @post, :image, fallback: "no_image.jpg", width: '90%', height: '90%' %></div>
-      <div class="mb-2 post-show__left__title">タイトル：<%= @post.title %></div>
-      <div class="mb-2 post-show__left__body">説明：<%= @post.body %></div>
-      <% if @post_tags.present? %> <!--タグ付けの有無を判定して表示を切り替える-->
-      <div class="post-show__left__tag--exists">関連タグ</div>
-      <div class="d-flex flex-row post-show__left__tag__name">
-        <% @post_tags.each do |post_tag| %>
-          <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
-            <div class="mb-2 text-secondary pr-2 post-show__left__tag__name__link">#<%= post_tag.name %></div>
-          <% end %>
-        <% end %>
-      </div>
-      <% else %>
-      <div class="mb-2 post-show__left__tag--none">タグ付けされていません</div>
-      <% end %>
-      <% if @post.user == current_user %>
-      <div class="d-flex flex-row post-show__left__action">
-        <div class="mb-2 mr-3 post-show__left__action__edit"><%= link_to "投稿を編集する", edit_post_path(@post), class: "btn btn-primary" %></div>
-        <div class="mb-2 post-show__left__action__delete"><%= link_to "投稿を削除する", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %></div>
-      </div>
-      <% end %>
+      <%= render 'posts/show-left', post: @post, post_tags: @post_tags %>
     </div>
     <div class="col-md-5 post-show__right">
       <div class="post-show__right__user-name">
@@ -48,7 +28,6 @@
       </div>
       <div class="post-show__right__comment-form">
         <%= render 'post_comments/form', post: @post, post_comment: @post_comment %>
-      </div>
       </div>
     </div>
   </div>
