--- a/app/views/posts/narrowing.html.erb
+++ b/app/views/posts/narrowing.html.erb
@@ -1,36 +1,10 @@
 <div class="container bg-light post-narrowing">
   <div class="row pt-3 post-narrowing">
     <div class="col-md-12 post-narrowing__title">
-      <h4 class="post-narrowing__title"><%= @post_tag.name %> タグの投稿一覧</h4>
+      <h4 id="post-narrowing__title"><%= @post_tag.name %> タグの投稿一覧</h4>
     </div>
   </div>
-  <div class="row pt-2 d-flex flex-wrap justify-content-center post-narrowing">
-    <% @posts.each do |post| %>
-    <%= link_to post_path(post.id) do %>
-    <div class="post-narrowing__content-box p-3">
-      <div class="post-narrowing__content-box__image"><%= attachment_image_tag post, :image, :fill, 300,300, fallback: "no_image.jpg", size: "300x200" %></div>
-      <div class="text-dark post-narrowing__content-box__title"><%= post.title.truncate(20) %></div>
-      <div class="small text-dark post-narrowing__content-box__favorite">♥<%= post.post_favorites.count %>いいね</div>
-      <div class="small text-dark post-narrowing__content-box__tag">
-        <% post.post_tags.each do |post_tag| %>
-          <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
-            <span class="text-secondary pr-2 post-narrowing__content-box__tag__name">#<%= post_tag.name %></span>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="small post-narrowing__content-box__user-name">
-        <%= link_to user_path(post.user.id) do %>
-          <div class="text-secondary post-narrowing__content-box__user-name__link">ユーザーネーム：<%= post.user.name %></div>
-        <% end %>
-      </div>
-      <div class="small text-dark post-narrowing__content-box__created-at">投稿日時：<%= post.created_at.to_s(:datetime_jp) %></div>
-    </div>
-    <% end %>
-    <% end %>
-  </div>
-  <div class="row pt-3 post-narrowing">
-    <div class="col-md-12 d-flex justify-content-center post-narrowing__paginate">
-      <%= paginate @posts %>
-    </div>
+  <div id="post-narrowing__pagenate">
+    <%= render 'posts/narrowing_pagenate', posts: @posts %>
   </div>
 </div>
