--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -5,55 +5,73 @@
     </div>
   </div>
   <div class="row d-flex justify-content-center part-index">
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__cpu" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(1) do %>
-        <div class="text-secondary">CPU</div>
-      <% end %>
-    </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__memory" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(14) do %>
-        <div class="text-secondary">メモリー</div>
-      <% end %>
-    </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__gpu" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(26) do %>
-        <div class="text-secondary">グラフィックボード</div>
-      <% end %>
-    </div>
+    <% if @cpu_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__cpu" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@cpu_tag.id) do %>
+          <div class="text-secondary">CPU</div>
+        <% end %>
+      </div>
+    <% end %>
+    <% if @memory_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__memory" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@memory_tag.id) do %>
+          <div class="text-secondary">メモリー</div>
+        <% end %>
+      </div>
+    <% end %>
+    <% if @video_card_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__gpu" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@video_card_tag.id) do %>
+          <div class="text-secondary">グラフィックボード</div>
+        <% end %>
+      </div>
+    <% end %>
   </div>
   <div class="row d-flex justify-content-center part-index__mb">
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(49) do %>
-        <div class="text-secondary">マザーボード</div>
-      <% end %>
-    </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__cooler" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(97) do %>
-        <div class="text-secondary">CPUクーラー</div>
-      <% end %>
-    </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__case" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(62) do %>
-        <div class="text-secondary">PCケース</div>
-      <% end %>
-    </div>
+    <% if @mother_board_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@mother_board_tag.id) do %>
+          <div class="text-secondary">マザーボード</div>
+        <% end %>
+      </div>
+    <% end %>
+    <% if @cpu_cooler_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__cooler" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@cpu_cooler_tag.id) do %>
+          <div class="text-secondary">CPUクーラー</div>
+        <% end %>
+      </div>
+    <% end %>
+    <% if @pc_case_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__case" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@pc_case_tag.id) do %>
+          <div class="text-secondary">PCケース</div>
+        <% end %>
+      </div>
+    <% end %>
   </div>
   <div class="row d-flex justify-content-center part-index">
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__power" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(80) do %>
-        <div class="text-secondary">PC電源</div>
-      <% end %>
-    </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__ssd" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(107) do %>
-        <div class="text-secondary">SSD</div>
-      <% end %>
-    </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__hdd" style="background-color: #DDDDDD;">
-      <%= link_to part_tag_parts_path(127) do %>
-        <div class="text-secondary">HDD</div>
-      <% end %>
-    </div>
+    <% if @power_supply_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__power" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@power_supply_tag.id) do %>
+          <div class="text-secondary">PC電源</div>
+        <% end %>
+      </div>
+    <% end %>
+    <% if @ssd_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__ssd" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@ssd_tag.id) do %>
+          <div class="text-secondary">SSD</div>
+        <% end %>
+      </div>
+    <% end %>
+    <% if @hdd_tag.present? %>
+      <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__hdd" style="background-color: #DDDDDD;">
+        <%= link_to part_tag_parts_path(@hdd_tag.id) do %>
+          <div class="text-secondary">HDD</div>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 
   <div class="row pt-2 part-index">
